--- a/mb/sass/blocks/steps.scss
+++ b/mb/sass/blocks/steps.scss
@@ -47,3 +47,20 @@
     font-family: 'ProximaNovaLight', sans-serif;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .steps {
+    padding: 25px 0;
+  }
+  
+  .steps__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .steps__box {
+    margin: 0 0 30px 0;
+  }
+}
