--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -163,6 +163,10 @@ body {
     text-transform: uppercase;
     background: #051c4f; }
 
+@media screen and (max-width: 768px) {
+  .button {
+    font-size: 16px; } }
+
 .title {
   padding: 0 0 95px 0;
   color: #fff;
@@ -295,8 +299,10 @@ body {
   font-size: 18px;
   font-family: 'ProximaNovaLight', sans-serif; }
   .counter__investor span {
+    padding: 0 0 0 80px;
     font-size: 48px;
-    font-family: 'ProximaNovaExtraBold', sans-serif; }
+    font-family: 'ProximaNovaExtraBold', sans-serif;
+    background: url("../img/counter-investor.svg") no-repeat left; }
 
 .counter__flex {
   display: -webkit-box;
@@ -315,13 +321,15 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 400px;
+  width: 380px;
   color: #051c4f;
   font-size: 18px;
   font-family: 'ProximaNovaLight', sans-serif; }
   .counter__client span {
+    padding: 0 0 0 70px;
     font-size: 35px;
-    font-family: 'ProximaNovaExtraBold', sans-serif; }
+    font-family: 'ProximaNovaExtraBold', sans-serif;
+    background: url("../img/counter-client.png") no-repeat left; }
 
 .counter__transactions {
   display: -webkit-box;
@@ -333,15 +341,21 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 400px;
+  width: 410px;
   color: #051c4f;
   font-size: 18px;
   font-family: 'ProximaNovaLight', sans-serif; }
   .counter__transactions span {
+    padding: 0 0 0 70px;
     font-size: 35px;
-    font-family: 'ProximaNovaExtraBold', sans-serif; }
+    font-family: 'ProximaNovaExtraBold', sans-serif;
+    background: url("../img/counter-transactions.svg") no-repeat left; }
 
 @media screen and (max-width: 768px) {
+  .counter {
+    padding: 40px 0; }
+    .counter hr {
+      width: 100%; }
   .counter__flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -349,7 +363,30 @@ body {
     flex-direction: column;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; } }
+    align-items: center; }
+  .counter__investor,
+  .counter__client,
+  .counter__transactions {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: auto;
+    text-align: center; }
+    .counter__investor p,
+    .counter__client p,
+    .counter__transactions p {
+      margin: 16px 0 0;
+      font-size: 16px; }
+  .counter__investor span {
+    padding: 0 0 0 60px;
+    font-size: 36px; }
+  .counter__client span {
+    padding: 0 0 0 60px;
+    font-size: 30px; }
+  .counter__transactions span {
+    padding: 0 0 0 60px;
+    font-size: 30px; } }
 
 .price {
   padding: 55px 0;
