--- a/mb/sass/blocks/button.scss
+++ b/mb/sass/blocks/button.scss
@@ -33,3 +33,11 @@
     background: $mc;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .button {
+    font-size: 16px;
+  }
+}
