--- a/mb/sass/blocks/counter.scss
+++ b/mb/sass/blocks/counter.scss
@@ -20,8 +20,10 @@
   font-family: 'ProximaNovaLight', sans-serif;
   
   span {
+    padding: 0 0 0 80px;
     font-size: 48px;
     font-family: 'ProximaNovaExtraBold', sans-serif;
+    background: url('../img/counter-investor.svg') no-repeat left;
   }
 }
 
@@ -34,14 +36,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 400px;
+  width: 380px;
   color: $mc;
   font-size: 18px;
   font-family: 'ProximaNovaLight', sans-serif;
   
   span {
+    padding: 0 0 0 70px;
     font-size: 35px;
     font-family: 'ProximaNovaExtraBold', sans-serif;
+    background: url('../img/counter-client.png') no-repeat left;
   }
 }
 
@@ -49,22 +53,69 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 400px;
+  width: 410px;
   color: $mc;
   font-size: 18px;
   font-family: 'ProximaNovaLight', sans-serif;
   
   span {
+    padding: 0 0 0 70px;
     font-size: 35px;
     font-family: 'ProximaNovaExtraBold', sans-serif;
+    background: url('../img/counter-transactions.svg') no-repeat left;
   }
 }
 
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
+  .counter {
+    padding: 40px 0;
+    
+    hr {
+      width: 100%;
+    }
+  }
+  
   .counter__flex {
     flex-direction: column;
     align-items: center;
+  }
+  
+  .counter__investor,
+  .counter__client,
+  .counter__transactions {
+    flex-direction: column;
+    width: auto;
+    text-align: center;
+    
+    p {
+      margin: 16px 0 0;
+      font-size: 16px;
+    }
+  }
+  
+  .counter__investor {
+    
+    span {
+      padding: 0 0 0 60px;
+      font-size: 36px;
+    }
+  }
+  
+  .counter__client {
+    
+    span {
+      padding: 0 0 0 60px;
+      font-size: 30px;
+    }
+  }
+  
+  .counter__transactions {
+    
+    span {
+      padding: 0 0 0 60px;
+      font-size: 30px;
+    }
   }
 }
