--- a/mb/sass/blocks/easy.scss
+++ b/mb/sass/blocks/easy.scss
@@ -17,3 +17,24 @@
   font-size: 20px;
   font-family: 'ProximaNovaLight', sans-serif;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .easy {
+    padding: 60px 0 80px;
+    
+    img {
+      width: 90px;
+    }
+  }
+  
+  .easy__title {
+    font-size: 24px;
+  }
+  
+  .easy__text {
+    margin: 0 0 50px 0;
+    font-size: 16px;
+  }
+}
