--- a/mb/sass/blocks/profit.scss
+++ b/mb/sass/blocks/profit.scss
@@ -15,3 +15,15 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .profit {
+    padding: 80px 0;
+    
+    p {
+      font-size: 23px;
+    }
+  }
+}
