--- a/mb/sass/blocks/ssl.scss
+++ b/mb/sass/blocks/ssl.scss
@@ -4,10 +4,6 @@
   text-align: center;
   background: $mc url('../img/ssl-bg.jpg') no-repeat top;
   background-size: cover;
-  
-  img {
-    
-  }
 }
 
 .ssl__title {
@@ -25,4 +21,23 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .ssl {
+    
+    img {
+      width: 75px;
+    }
+  }
+  
+  .ssl__title {
+    font-size: 23px;
+  }
+  
+  .ssl__text {
+    font-size: 16px;
+  }
 }
