--- a/mb/sass/blocks/type.scss
+++ b/mb/sass/blocks/type.scss
@@ -81,3 +81,24 @@
     color: $mc;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .type {
+    padding: 30px 0;
+    
+    h1 {
+      margin: 0 0 25px 0;
+      font-size: 24px;
+    }
+  }
+  
+  .type__flex {
+    flex-direction: column;
+  }
+  
+  .type__box {
+    width: 300px;
+  }
+}
