--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -668,6 +668,8 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  .type__flex--mobile {
+    display: none !important; }
 
 .type__box {
   width: 320px;
@@ -714,10 +716,11 @@ body {
     .type h1 {
       margin: 0 0 25px 0;
       font-size: 24px; }
+    .type hr {
+      display: none; }
   .type__flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; }
+    display: none; }
+    .type__flex--mobile {
+      display: block !important; }
   .type__box {
     width: 300px; } }
