--- a/mb/sass/blocks/button.scss
+++ b/mb/sass/blocks/button.scss
@@ -39,5 +39,13 @@
 @media screen and ($mobile-widths) {
   .button {
     font-size: 16px;
+    
+    &--blue {
+      padding: 10px 40px;
+    }
+    
+    &--unclick {
+      padding: 10px 40px;
+    }
   }
 }
