--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -304,19 +304,13 @@ body {
   font-weight: 900;
   font-style: italic; }
 
-.header__flex {
+.header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding: 30px 0; }
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
 
 @media screen and (max-width: 768px) {
   .header__flex {
@@ -359,19 +353,21 @@ body {
         font-size: 20px; } }
 
 .title {
-  padding: 280px 0;
-  text-align: center;
+  padding: 50px 0 180px;
   background: #488dae url("../img/title-bg.jpg") no-repeat top;
   background-size: cover; }
   .title h1 {
-    margin-top: 0px;
+    margin-top: 130px;
     margin-bottom: 0;
     font-size: 60px;
     font-family: 'Proxima Nova Rg', sans-serif;
+    text-align: center;
     text-transform: uppercase; }
   .title b {
+    display: block;
     font-size: 36px;
-    font-family: 'Proxima Nova Rg', sans-serif; }
+    font-family: 'Proxima Nova Rg', sans-serif;
+    text-align: center; }
 
 .title__links {
   display: -webkit-box;
@@ -386,7 +382,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .title {
-    padding: 200px 0; }
+    padding: 50px 0 180px; }
     .title h1 {
       font-size: 40px; }
     .title b {
