--- a/bb/sass/blocks/header.scss
+++ b/bb/sass/blocks/header.scss
@@ -1,14 +1,8 @@
 .header {
-  
+  display: flex;
+  justify-content: flex-start;
 }
 
-.header__flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 30px 0;
-}
 
 @media screen and ($tablet-widths) {}
 
