--- a/bb/sass/blocks/title.scss
+++ b/bb/sass/blocks/title.scss
@@ -1,21 +1,24 @@
 .title {
-  padding: 280px 0;
-  text-align: center;
+  // padding: 280px 0;
+  padding: 50px 0 180px;
   background: #488dae url('../img/title-bg.jpg') no-repeat top;
   background-size: cover;
   
   h1 {
-    margin-top: 0px;
+    margin-top: 130px;
     margin-bottom: 0;
     // padding-top: 280px;
     font-size: 60px;
     font-family: 'Proxima Nova Rg', sans-serif;
+    text-align: center;
     text-transform: uppercase;
   }
   
   b {
+    display: block;
     font-size: 36px;
     font-family: 'Proxima Nova Rg', sans-serif;
+    text-align: center;
   }
 }
 
@@ -33,7 +36,7 @@
 
 @media screen and ($mobile-widths) {
   .title {
-    padding: 200px 0;
+    padding: 50px 0 180px;
     
     h1 {
       font-size: 40px;
