--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -1030,6 +1030,7 @@ body {
       margin-bottom: 10px;
       padding: 10px 15px;
       font-size: 16px;
+      font-family: 'ProximaNovaLight', sans-serif;
       border: none;
       opacity: 0.8;
       -webkit-transition: 0.5s;
@@ -1044,11 +1045,20 @@ body {
       margin-bottom: 30px;
       padding: 10px 15px;
       font-size: 16px;
+      font-family: 'ProximaNovaLight', sans-serif;
       border: none;
       opacity: 0.8;
       resize: none; }
       .popup form textarea:focus {
         opacity: 1; }
+      .popup form textarea::-webkit-input-placeholder {
+        font-family: 'ProximaNovaLight', sans-serif; }
+      .popup form textarea:-ms-input-placeholder {
+        font-family: 'ProximaNovaLight', sans-serif; }
+      .popup form textarea::-ms-input-placeholder {
+        font-family: 'ProximaNovaLight', sans-serif; }
+      .popup form textarea::placeholder {
+        font-family: 'ProximaNovaLight', sans-serif; }
     .popup form button {
       height: 60px;
       padding: 20px 0;
