--- a/bb/sass/blocks/popup.scss
+++ b/bb/sass/blocks/popup.scss
@@ -31,6 +31,7 @@
       margin-bottom: 10px;
       padding: 10px 15px;
       font-size: 16px;
+      font-family: 'ProximaNovaLight', sans-serif;
       border: none;
       opacity: 0.8;
       transition: 0.5s;
@@ -50,12 +51,17 @@
       margin-bottom: 30px;
       padding: 10px 15px;
       font-size: 16px;
+      font-family: 'ProximaNovaLight', sans-serif;
       border: none;
       opacity: 0.8;
       resize: none;
       
       &:focus {
         opacity: 1;
+      }
+      
+      &::placeholder {
+        font-family: 'ProximaNovaLight', sans-serif;
       }
     }
     
