--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -1059,7 +1059,7 @@ body {
         font-family: 'ProximaNovaLight', sans-serif; }
       .popup form textarea::placeholder {
         font-family: 'ProximaNovaLight', sans-serif; }
-    .popup form button {
+    .popup form button[type="submit"] {
       height: 60px;
       padding: 20px 0;
       color: #fff;
@@ -1067,6 +1067,21 @@ body {
       font-family: 'ProximaNovaBold', sans-serif;
       border: none;
       background: #ff5400; }
+
+.popup__close {
+  position: absolute;
+  top: -10px;
+  right: 0;
+  width: 13px;
+  height: 13px;
+  border: none;
+  background: url("../img/close.svg") no-repeat top;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer; }
+  .popup__close:hover {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg); }
 
 .popup__overlay {
   overflow: auto;
