--- a/borsa/sass/blocks/main-nav.scss
+++ b/borsa/sass/blocks/main-nav.scss
@@ -17,6 +17,7 @@
   }
   
   a {
+    padding-top: 13px;
     padding-bottom: 15px;
     font-size: 18px;
     text-decoration: none;
@@ -35,8 +36,9 @@
   width: 232px;
   padding-left: 0;
   list-style: none;
-  border: 1px solid red;
+  // border: 1px solid red;
   border-radius: 5px;
+  background: rgba(255, 255, 255, 0.8);
   transition: 0.2s;
   z-index: 2;
   
@@ -50,6 +52,7 @@
     transition: 0.2s;
     
     &:hover {
+      border-radius: 5px;
       background: red;
     }
   }
@@ -57,6 +60,13 @@
 
 .main-nav > li:hover .main-nav__list {
   display: flex;
+}
+
+.main-nav__title {
+  margin: 0 10px 0 0;
+  padding: 0 15px 0 0;
+  background: url('../img/arrow.svg') no-repeat right;
+  background-size: 14px;
 }
 
 .main-nav__user {
