--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -646,7 +646,7 @@ body {
 
 .comment__box {
   height: 350px !important;
-  padding-top: 100px;
+  padding-top: 140px;
   text-align: center;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
@@ -654,8 +654,9 @@ body {
     position: absolute;
     top: 0;
     width: 700px;
-    margin-left: -240px;
+    margin-left: -230px;
     font-size: 18px;
+    text-align: left;
     opacity: 0; }
   .comment__box img {
     width: 100px;
@@ -695,7 +696,8 @@ body {
   -webkit-transition: 0.3s;
   transition: 0.3s; }
   .news__box img {
-    width: 100%; }
+    width: 100%;
+    height: 200px; }
   .news__box header {
     display: -webkit-box;
     display: -ms-flexbox;
