--- a/borsa/sass/blocks/edge.scss
+++ b/borsa/sass/blocks/edge.scss
@@ -11,7 +11,7 @@
   
   p {
     margin-top: 0;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     font-size: 26px;
     font-family: 'Open Sans Regular', sans-serif;
   }
